@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2012 Tom Keffer <tkeffer@gmail.com>
+# Copyright (c) 2012-2014 Tom Keffer <tkeffer@gmail.com>
 #
 #    See the file LICENSE.txt for your full rights.
 #
@@ -17,18 +17,32 @@ import _mysql_exceptions
 from weeutil.weeutil import to_bool
 import weedb
 
+
+def guard(fn):
+    """Decorator function that converts MySQL exceptions into weedb exceptions."""
+
+    def guarded_fn(*args, **kwargs):
+        try:
+            return fn(*args, **kwargs)
+        except (_mysql_exceptions.OperationalError, _mysql_exceptions.ProgrammingError), e:
+            raise weedb.OperationalError(e)
+
+    return guarded_fn
+
+
 def connect(host='localhost', user='', password='', database='', driver='', **kwargs):
     """Connect to the specified database"""
     return Connection(host=host, user=user, password=password, database=database, **kwargs)
+
 
 def create(host='localhost', user='', password='', database='', driver='', **kwargs):
     """Create the specified database. If it already exists,
     an exception of type weedb.DatabaseExists will be thrown."""
     # Open up a connection w/o specifying the database.
     try:
-        connect = MySQLdb.connect(host   = host,
-                                  user   = user,
-                                  passwd = password, **kwargs)
+        connect = MySQLdb.connect(host=host,
+                                  user=user,
+                                  passwd=password, **kwargs)
         cursor = connect.cursor()
         # An exception will get thrown if the database already exists.
         try:
@@ -41,14 +55,15 @@ def create(host='localhost', user='', password='', database='', driver='', **kwa
             cursor.close()
     except _mysql_exceptions.OperationalError, e:
         raise weedb.OperationalError(e)
-    
+
+
 def drop(host='localhost', user='', password='', database='', driver='', **kwargs):
     """Drop (delete) the specified database."""
     # Open up a connection
     try:
-        connect = MySQLdb.connect(host   = host,
-                                  user   = user,
-                                  passwd = password, **kwargs)
+        connect = MySQLdb.connect(host=host,
+                                  user=user,
+                                  passwd=password, **kwargs)
         cursor = connect.cursor()
         try:
             cursor.execute("DROP DATABASE %s" % database)
@@ -58,10 +73,11 @@ def drop(host='localhost', user='', password='', database='', driver='', **kwarg
             cursor.close()
     except _mysql_exceptions.OperationalError, e:
         raise weedb.OperationalError(e)
-    
+
+
 class Connection(weedb.Connection):
     """A wrapper around a MySQL connection object."""
-    
+
     def __init__(self, host='localhost', user='', password='', database='', **kwargs):
         """Initialize an instance of Connection.
 
@@ -83,24 +99,25 @@ class Connection(weedb.Connection):
             raise weedb.OperationalError(str(e) + " while opening database '%s'" % (database,))
 
         weedb.Connection.__init__(self, connection, database, 'mysql')
-        
+
         # Allowing threads other than the main thread to see any transactions
         # seems to require an isolation level of READ UNCOMMITTED.
-        self.query("SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED") 
-        
+        self.connection.query("SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED")
+
     def cursor(self):
         """Return a cursor object."""
         # The implementation of the MySQLdb cursor is lame enough that we are
         # obliged to include a wrapper around it:
         return Cursor(self)
-    
+
+    @guard
     def tables(self):
         """Returns a list of tables in the database."""
-        
+
         table_list = list()
+        # Get a cursor directly from MySQL
+        cursor = self.connection.cursor()
         try:
-            # Get a cursor directly from MySQL
-            cursor = self.connection.cursor()
             cursor.execute("""SHOW TABLES;""")
             while True:
                 row = cursor.fetchone()
@@ -110,29 +127,26 @@ class Connection(weedb.Connection):
         finally:
             cursor.close()
         return table_list
-    
+
+    @guard
     def genSchemaOf(self, table):
         """Return a summary of the schema of the specified table.
         
         If the table does not exist, an exception of type weedb.OperationalError is raised."""
-        
+
+        # Get a cursor directly from MySQL:
+        cursor = self.connection.cursor()
         try:
-            # Get a cursor directly from MySQL:
-            cursor = self.connection.cursor()
-            # MySQL throws an exception if you try to show the columns of a
-            # non-existing table
-            try:
-                cursor.execute("""SHOW COLUMNS IN %s;""" % table)
-            except _mysql_exceptions.ProgrammingError, e:
-                # Table does not exist. Change the exception type:
-                raise weedb.OperationalError(e)
+            # If the table does not exist, this will raise a MySQL ProgrammingError exception,
+            # which gets converted to a weedb.OperationalError exception by the guard decorator
+            cursor.execute("""SHOW COLUMNS IN %s;""" % table)
             irow = 0
             while True:
                 row = cursor.fetchone()
                 if row is None: break
                 # Append this column to the list of columns.
                 colname = str(row[0])
-                if row[1].upper()=='DOUBLE':
+                if row[1].upper() == 'DOUBLE':
                     coltype = 'REAL'
                 elif row[1].upper().startswith('INT'):
                     coltype = 'INTEGER'
@@ -145,68 +159,59 @@ class Connection(weedb.Connection):
                 irow += 1
         finally:
             cursor.close()
-            
-                
+
+    @guard
     def columnsOf(self, table):
         """Return a list of columns in the specified table. 
         
         If the table does not exist, an exception of type weedb.OperationalError is raised."""
         column_list = [row[1] for row in self.genSchemaOf(table)]
         return column_list
-    
+
+    @guard
     def begin(self):
         """Begin a transaction."""
-        self.query("START TRANSACTION")
-    
+        self.connection.query("START TRANSACTION")
+
+    @guard
     def commit(self):
-        try:
-            weedb.Connection.commit(self)
-        except _mysql_exceptions.OperationalError, e:
-            raise weedb.OperationalError(e)
-        
+        self.connection.commit()
+
+    @guard
     def rollback(self):
-        try:
-            weedb.Connection.rollback(self)
-        except _mysql_exceptions.OperationalError, e:
-            raise weedb.OperationalError(e)
-        
-    def query(self, *args, **kwargs):
-        try:
-            self.connection.query(*args, **kwargs)
-        except _mysql_exceptions.OperationalError, e:
-            raise weedb.OperationalError(e)
-        
+        self.connection.rollback()
+
+
 class Cursor(object):
     """A wrapper around the MySQLdb cursor object"""
-    
+
     def __init__(self, connection):
         """Initialize a Cursor from a connection.
         
         connection: An instance of db.mysql.Connection"""
-        
+
         # Get the MySQLdb cursor and store it internally:
         self.cursor = connection.connection.cursor()
-    
-    def execute(self, sql_string, sql_tuple=() ):
+
+    @guard
+    def execute(self, sql_string, sql_tuple=()):
         """Execute a SQL statement on the MySQL server.
         
         sql_string: A SQL statement to be executed. It should use ? as
         a placeholder.
         
         sql_tuple: A tuple with the values to be used in the placeholders."""
-        
+
         # MySQL uses '%s' as placeholders, so replace the ?'s with %s
-        mysql_string = sql_string.replace('?','%s')
-            
-        try:
-            # Convert sql_tuple to a plain old tuple, just in case it actually
-            # derives from tuple, but overrides the string conversion (as is the
-            # case with a TimeSpan object):
-            self.cursor.execute(mysql_string, tuple(sql_tuple))
-        except (_mysql_exceptions.OperationalError, _mysql_exceptions.ProgrammingError), e:
-            raise weedb.OperationalError(e)
+        mysql_string = sql_string.replace('?', '%s')
+
+        # Convert sql_tuple to a plain old tuple, just in case it actually
+        # derives from tuple, but overrides the string conversion (as is the
+        # case with a TimeSpan object):
+        self.cursor.execute(mysql_string, tuple(sql_tuple))
+
         return self
-        
+
     def fetchone(self):
         # Get a result from the MySQL cursor, then run it through the massage
         # filter below
@@ -218,18 +223,19 @@ class Cursor(object):
             del self.cursor
         except:
             pass
-    
+
     #
     # Supplying functions __iter__ and next allows the cursor to be used as an iterator.
     #
     def __iter__(self):
         return self
-    
+
     def next(self):
         result = self.fetchone()
         if result is None:
             raise StopIteration
         return result
+
 
 #
 # This is a utility function for converting a result set that might contain
@@ -238,4 +244,4 @@ class Cursor(object):
 def massage(seq):
     # Return the massaged sequence if it exists, otherwise, return None
     if seq is not None:
-        return [int(i) if isinstance(i, long) or isinstance(i,decimal.Decimal) else i for i in seq]
+        return [int(i) if isinstance(i, long) or isinstance(i, decimal.Decimal) else i for i in seq]
