@@ -1,5 +1,5 @@
 #
-#    Copyright (c) 2012 Tom Keffer <tkeffer@gmail.com>
+# Copyright (c) 2012-2014 Tom Keffer <tkeffer@gmail.com>
 #
 #    See the file LICENSE.txt for your full rights.
 #
@@ -15,16 +15,31 @@ import os.path
 # Import sqlite3. If it does not support the 'with' statement, then
 # import pysqlite2, which might...
 import sqlite3
+
 if not hasattr(sqlite3.Connection, "__exit__"):  # @UndefinedVariable
     del sqlite3
-    from pysqlite2 import dbapi2 as sqlite3 #@Reimport @UnresolvedImport
+    from pysqlite2 import dbapi2 as sqlite3  #@Reimport @UnresolvedImport
 
 import weedb
-from weeutil.weeutil import to_bool, to_int
+from weeutil.weeutil import to_int, to_bool
+
+
+def guard(fn):
+    """Decorator function that converts sqlite exceptions into weedb exceptions."""
+
+    def guarded_fn(*args, **kwargs):
+        try:
+            return fn(*args, **kwargs)
+        except sqlite3.OperationalError, e:
+            raise weedb.OperationalError(e)
+
+    return guarded_fn
+
 
 def connect(database='', root='', driver='', **argv):
     """Factory function, to keep things compatible with DBAPI. """
     return Connection(database=database, root=root, **argv)
+
 
 def create(database='', root='', driver='', **argv):
     """Create the database specified by the db_dict. If it already exists,
@@ -43,16 +58,18 @@ def create(database='', root='', driver='', **argv):
         connection = sqlite3.connect(file_path, timeout=timeout, isolation_level=isolation_level)
         connection.close()
 
+
 def drop(database='', root='', driver='', **argv):
     file_path = os.path.join(root, database)
     try:
         os.remove(file_path)
     except OSError:
         raise weedb.NoDatabase("""Attempt to drop non-existent database %s""" % (file_path,))
-    
+
+
 class Connection(weedb.Connection):
     """A wrapper around a sqlite3 connection object."""
-    
+
     def __init__(self, database='', root='', pragmas=None, **argv):
         """Initialize an instance of Connection.
 
@@ -61,6 +78,7 @@ class Connection(weedb.Connection):
             database: The name of the Sqlite database. This is generally the file name
             root: The path to the directory holding the database. Joining "root" with
               "database" results in the full path to the sqlite file.
+            pragmas: Any pragma statements, in the form of a dictionary.
             timeout: The amount of time, in seconds, to wait for a lock to be released. 
               Optional. Default is 5.
             isolation_level: The type of isolation level to use. One of None, 
@@ -68,7 +86,7 @@ class Connection(weedb.Connection):
             
         If the operation fails, an exception of type weedb.OperationalError will be raised.
         """
-                
+
         self.file_path = os.path.join(root, database)
         if not os.path.exists(self.file_path):
             raise weedb.OperationalError("Attempt to open a non-existent database %s" % database)
@@ -80,33 +98,37 @@ class Connection(weedb.Connection):
             # The Pysqlite driver does not include the database file path.
             # Include it in case it might be useful.
             raise weedb.OperationalError("Unable to open database '%s'" % (self.file_path,))
-        
+
         if pragmas is not None:
             for pragma in pragmas:
                 connection.execute("PRAGMA %s=%s;" % (pragma, pragmas[pragma]))
         weedb.Connection.__init__(self, connection, database, 'sqlite')
 
+    @guard
     def cursor(self):
         """Return a cursor object."""
         return Cursor(self.connection)
-    
-    def execute(self, sql_string, sql_tuple=() ):
+
+    @guard
+    def execute(self, sql_string, sql_tuple=()):
         """Execute a sql statement. This specialized version takes advantage
         of sqlite's ability to do an execute without a cursor."""
-        
+
         with self.connection:
             self.connection.execute(sql_string, sql_tuple)
-    
+
+    @guard
     def tables(self):
         """Returns a list of tables in the database."""
-        
+
         table_list = list()
         for row in self.connection.execute("""SELECT tbl_name FROM sqlite_master WHERE type='table';"""):
             # Extract the table name. Sqlite returns unicode, so always
             # convert to a regular string:
             table_list.append(str(row[0]))
         return table_list
-                
+
+    @guard
     def genSchemaOf(self, table):
         """Return a summary of the schema of the specified table.
         
@@ -117,7 +139,7 @@ class Connection(weedb.Connection):
             else:
                 coltype = str(row[2]).upper()
             yield (row[0], str(row[1]), coltype, not to_bool(row[3]), row[4], to_bool(row[5]))
-        
+
     def columnsOf(self, table):
         """Return a list of columns in the specified table. If the table does not exist,
         None is returned."""
@@ -129,20 +151,44 @@ class Connection(weedb.Connection):
             raise weedb.OperationalError("No such table %s" % table)
         return column_list
 
+    @guard
     def begin(self):
         self.connection.execute("BEGIN TRANSACTION")
-        
+
+    @guard
+    def commit(self):
+        self.connection.commit()
+
+    @guard
+    def rollback(self):
+        self.connection.rollback()
+
+    @guard
+    def close(self):
+        self.connection.close()
+
+
 class Cursor(sqlite3.Cursor):
     """A wrapper around the sqlite cursor object"""
-    
+
     # The sqlite3 cursor object is very full featured. We need only turn
     # the sqlite exceptions into weedb exceptions.
     def __init__(self, *args, **kwargs):
         sqlite3.Cursor.__init__(self, *args, **kwargs)
-        
+
+    @guard
     def execute(self, *args, **kwargs):
-        try:
-            return sqlite3.Cursor.execute(self, *args, **kwargs)
-        except sqlite3.OperationalError, e:
-            # Convert to a weedb exception
-            raise weedb.OperationalError(e)
+        return sqlite3.Cursor.execute(self, *args, **kwargs)
+
+    @guard
+    def fetchone(self):
+        return sqlite3.Cursor.fetchone(self)
+
+    @guard
+    def fetchall(self):
+        return sqlite3.Cursor.fetchall(self)
+
+    @guard
+    def fetchmany(self, size=None):
+        if size is None: size = self.arraysize
+        return sqlite3.Cursor.fetchmany(self, size)
