@@ -12,6 +12,10 @@ of 'rain'.
 Fixed possible fatal exception in WS23xx driver.  Fixed use of str as variable
 name in WS23xx driver.
 
+Now catches database exceptions raised during commits, converting them to
+weedb exceptions. Weewx catches these, allowing the program to keep going, even
+in the face of most database errors.
+
 
 2.7.0 10/11/14
 
